# ssm_helper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.MD  test_template.tpl  test_template_error.tpl
.github/workflows/: rust.yml
src/: args.rs  main.rs  ssm_ops.rs  ssm_parameters.rs
