[package]
authors = ["Rodrigo Falcetta Laperuta <rflaperuta@gmail.com>"]
categories = []
description = "AWS SSM Parameter Store Helper - A command line helper for AWS SSM Parameters, written in Rust."
documentation = "https://docs.rs/ssm_helper"
homepage = "https://github.com/rflaperuta/ssm_helper"
keywords = ["ssm", "aws", "systems manager", "template", "parameters"]
license = "MIT/Apache-2.0"
name = "ssm_helper"
readme = "readme.md"
repository = "https://github.com/rflaperuta/ssm_helper.git"
version = "0.2.0"
edition = "2018"
[[bin]]
bench = false
name = "ssm_helper"
path = "src/main.rs"

[dependencies]
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_ssm = { version = "0.42.0", default_features = false, features = ["rustls"] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
handlebars = "2.0.4"
failure = "0.1.6"
failure_derive = "0.1.6"
structopt = "0.3.7"
#openssl-sys = "*"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[profile.release]
debug = false
lto = true
# Optimize for size
#opt-level = 's'
# Aggressive optimizations for size, further speed costs
opt-level = 'z'
panic = 'abort'

#[features]
## Force openssl-sys to staticly link in the openssl library. Necessary when
## cross compiling to x86_64-unknown-linux-musl.
#vendored = ["openssl-sys/vendored"]
